--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
   dots_indicator: ^3.0.0
+  equatable: ^2.0.5
 
 dev_dependencies:
+  firebase_auth: ^4.8.0
+  firebase_core: ^2.15.1
   flutter_test:
     sdk: flutter
+  shared_preferences: ^2.2.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
