--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   equatable: ^2.0.5
 
 dev_dependencies:
+  cloud_firestore: ^4.9.0
   firebase_auth: ^4.8.0
   firebase_core: ^2.15.1
   flutter_test:
