--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,10 @@ dev_dependencies:
   cloud_firestore: ^4.9.0
   firebase_auth: ^4.8.0
   firebase_core: ^2.15.1
+  flutter_svg: ^2.0.7
   flutter_test:
     sdk: flutter
+  google_sign_in: ^6.1.5
   shared_preferences: ^2.2.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -69,6 +71,7 @@ flutter:
     - assets/
     - assets/images/
     - assets/images/onboarding/
+    - assets/svg/
       #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
